--- a/templates/components/header/my.head.html.twig
+++ b/templates/components/header/my.head.html.twig
@@ -1,13 +1,13 @@
 <header class="row mt-1 mb-1">
-    <div class="col-sm-3 col-md-3 col-lg-2 sidebar" id="myLogo">
-        <a href=""  style="font-size:600;font-weight: bolder;color:#FFFFFF">
-            Z <i class="far fa-handshake"></i> ya <br> &nbsp;
+    <div class="col-sm-3 col-md-3 col-lg-2 pt-3" id="myLogo" style="background-color:#576b95">
+        <a href="{{ path('app_main_page') }}">
+           <span class="align-middle font-weight-bold" style="font-size:2rem;color:#FFFFFF">Z <i class="far fa-handshake"></i> ya</span>
         </a>
     </div>
     <div class="col-sm-9 col-md-7 col-lg-6" id="mainNav">
         <span>Deutschland kostenlos Mitfahrgelegenheit App</span>
-        {# include this latter
-        include 'navbar/navbar.top.htlm.twig' %}
-        #}
+        {#  #}
+        {%  include 'components/header/navbar.top.htlm.twig' %}
+
     </div>
 </header>
