--- a/templates/components/header/navbar.top.htlm.twig
+++ b/templates/components/header/navbar.top.htlm.twig
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-1 mt-2 shadow">
-
+    {% if app.user %}
     <!-- Sidebar Toggle (Topbar) -->
-    <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3" onclick="openNav()">
+    <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
         <i class="fa fa-bars"></i>
     </button>
-
+    {% endif %}
     <!-- Topbar Search -->
     <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
         <div class="input-group">
@@ -38,11 +38,11 @@
             </a>
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="{{ path('user_dashboard_profile') }}">
+                <a class="dropdown-item" href="{{ path('my_user_index') }}">
                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                     Profile
                 </a>
-                <a class="dropdown-item" href="{{ path('user_dashboard') }}">
+                <a class="dropdown-item" href="{{ path('my_user_index') }}">
                     <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
                     Dashboard
                 </a>
