--- a/templates/my.base.html.twig
+++ b/templates/my.base.html.twig
@@ -16,7 +16,9 @@
     {% include "components/header/my.head.html.twig" %}
     <div class="row">
         <div class="col-sm-3 col-md-3 col-lg-2 sidebar" id="rightSidebar">
-            {% block rightSidebar %}{% endblock %}
+            {% block rightSidebar %}
+                {% include "components/sidebar/my.right.html.twig" %}
+            {% endblock %}
         </div>
         <div class="col-sm-9 col-md-7 col-lg-6" id="mainContent">
             <div class="alert alert-secondary" role="alert">
