--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Registrieren!{% endblock %}
 
  {% block mainContent %}
-     <h1>Registrieren</h1>
+     <h1 class="h3 mb-3 font-weight-bold">Registrieren</h1>
      {% form_theme registrationForm 'bootstrap_4_layout.html.twig' %}
      {{ form_start(registrationForm, {'attr': {class: 'w-75 mx-auto'}} ) }}
      {{ form_row(registrationForm.firstName, { 'label': 'Vorname' }) }}
