--- a/templates/components/sidebar/my.right.html.twig
+++ b/templates/components/sidebar/my.right.html.twig
@@ -11,7 +11,7 @@
     </li>
     <!-- Nav Item - Photo -->
     <li class="nav-item ml-2">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{{ path('my_user_photo') }}">
             <i class="fas fa-portrait"></i>
             <span>Photo</span></a>
     </li>
