--- a/templates/user/admin/edit.html.twig
+++ b/templates/user/admin/edit.html.twig
@@ -1,13 +1,13 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin.base.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
+{% block title %}Users{% endblock %}
 
-{% block body %}
+{% block mainContent %}
     <h1>Edit User</h1>
 
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('user/admin/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('user_index') }}">back to list</a>
+    <a href="{{ path('admin_user_index') }}">back to list</a>
 
-    {{ include('user/_delete_form.html.twig') }}
+    {{ include('user/admin/_delete_form.html.twig') }}
 {% endblock %}
