--- a/templates/user/admin/new.html.twig
+++ b/templates/user/admin/new.html.twig
@@ -1,11 +1,11 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin.base.html.twig' %}
 
-{% block title %}New User{% endblock %}
+{% block title %}Users{% endblock %}
 
-{% block body %}
+{% block mainContent %}
     <h1>Create new User</h1>
 
-    {{ include('user/_form.html.twig') }}
+    {{ include('user/admin/_form.html.twig') }}
 
-    <a href="{{ path('user_index') }}">back to list</a>
+    <a href="{{ path('admin_user_index') }}">back to list</a>
 {% endblock %}
