--- a/templates/user/admin/show.html.twig
+++ b/templates/user/admin/show.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin.base.html.twig' %}
 
-{% block title %}User{% endblock %}
+{% block title %}Users{% endblock %}
 
-{% block body %}
+{% block mainContent %}
     <h1>User</h1>
 
     <table class="table">
@@ -62,9 +62,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('user_index') }}">back to list</a>
+    <a href="{{ path('admin_user_index') }}">back to list</a>
 
-    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
+    <a href="{{ path('admin_user_edit', {'id': user.id}) }}">edit</a>
 
-    {{ include('user/_delete_form.html.twig') }}
+    {{ include('user/admin/_delete_form.html.twig') }}
 {% endblock %}
