--- a/templates/security/not.activate.html.twig
+++ b/templates/security/not.activate.html.twig
@@ -3,5 +3,5 @@
 {% block title %}aktivieren Sie!{% endblock %}
 
  {% block mainContent %}
-     Gehen Sie zu Ihrer E-Mail und klicken Sie auf den Aktivierungslink
+     Soory something went wrong contact Admin
  {% endblock %}
