--- a/templates/user/my/_form.profile.html.twig
+++ b/templates/user/my/_form.profile.html.twig
@@ -1,6 +1,8 @@
 {% form_theme form 'bootstrap_4_layout.html.twig' %}
 {{ form_start(form) }}
-    {{ form_row(form.phoneNr, {'label': 'Handy Nr'}) }}
-    {{ form_row(form.email) }}
+     {{ form_start(form, {'attr': {class: 'w-75 mx-auto'}} ) }}
+     {{ form_row(form.firstName, { 'label': 'Vorname' }) }}
+     {{ form_row(form.lastName, { 'label': 'Nachname' }) }}
+     {{ form_row(form.dateOfBirth, { 'label': 'Geburtsdatum' }) }}
     <button class="btn btn-secondary">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
