--- a/templates/components/sidebar/my.right.html.twig
+++ b/templates/components/sidebar/my.right.html.twig
@@ -23,7 +23,7 @@
     </li>
     <!-- Nav Item - Verification -->
     <li class="nav-item ml-2">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" href="{{ path('my_user_verify') }}">
             <i class="fas fa-user-check"></i>
             <span>Verifizierung</span></a>
     </li>
