--- a/templates/security/sucess.activate.html.twig
+++ b/templates/security/sucess.activate.html.twig
@@ -3,5 +3,5 @@
 {% block title %}aktivieren Sie!{% endblock %}
 
  {% block mainContent %}
-     Gehen Sie zu Ihrer E-Mail und klicken Sie auf den Aktivierungslink
+     <span class="text-success">Dein Konto wurde aktiviert</span>
  {% endblock %}
