--- a/templates/components/sidebar/my.right.html.twig
+++ b/templates/components/sidebar/my.right.html.twig
@@ -33,7 +33,7 @@
     </div>
     <!-- Nav Item - Car details -->
     <li class="nav-item ml-2">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{{ path('my_car_index') }}">
             <i class="fas fa-car"></i>
             <span>Auto</span></a>
     </li>
