--- a/templates/car/my/_form.html.twig
+++ b/templates/car/my/_form.html.twig
@@ -2,6 +2,7 @@
 {{ form_start(form) }}
     {{ form_row(form.brand, {'label': 'Marke'}) }}
     {{ form_row(form.model, {'label': 'Modell'}) }}
+    <div class="text-info">Indem Sie den untenstehenden Artikel überprüfen, akzeptieren Sie die Bedingung</div>
     {{ form_row(form.isChating, {'label': 'Chatten ?'}) }}
     {{ form_row(form.isMusic, {'label': 'Musik ?'}) }}
     {{ form_row(form.isSmoking, {'label': 'Rauchen ?'}) }}
