--- a/templates/car/my/new.html.twig
+++ b/templates/car/my/new.html.twig
@@ -1,21 +1,39 @@
 {% extends 'my.base.html.twig' %}
 
 {% block title %}Benutzer{% endblock %}
-
+    {% block stylesheets %}
+        {{ parent() }}
+        <link href="{{ asset('css/jquery-ui.min.css') }}" rel="stylesheet">
+    {% endblock %}
 {% block mainContent %}
 <h1 style="font-size: 1rem;font-weight: bolder">Auto --> Neuen</h1>
 <div class="card mb-3" style="max-width: 540px; font-size: 0.8rem">
     <div class="row no-gutters">
         <div class="card-body">
             {% if form is not empty %}
-    {{ include('car/my/_form.html.twig') }}
-    <hr>
-    <a class="mt-3" style="font-size:1.5rem"  href="{{ path('my_car_index') }}">Züruck <i class="fas fa-list-ol"></i></a>
+            <div class="w-50">
+                {{ include('car/my/_form.html.twig') }}
+            </div>
+
+            <hr>
+            <a class="mt-3" style="font-size:1rem"  href="{{ path('my_car_index') }}"><i class="fas fa-list-ol"></i></a>
         </div>
     </div>
     {% else %}
-    <div>Only 3 cars are allowed</div>
+    <div>Nur 3 Autos sind erlaubt</div>
+        <hr>
+        <a class="mt-3" style="font-size:1rem"  href="{{ path('my_car_index') }}"><i class="fas fa-list-ol"></i></a>
     {% endif %}
 
 </div>
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('js/jquery-ui.min.js') }}" ></script>
+    <script>
+        var car_brands = ["Audi","BMW","Ford","Mercedes-Benz","Opel","Renault","Volkswagen","9ff","Abarth","AC","ACM","Acura","Aixam","Alfa Romeo","Alpina","Alpine","Amphicar","Ariel Motor","Artega","Aspid","Aston Martin","Austin","Autobianchi","Auverland","Baic","Bedford","Bellier","Bentley","Bolloré","Borgward","Brilliance","Bugatti","Buick","BYD","Cadillac","Caravans-Wohnm","Casalini","Caterham","Changhe","Chatenet","Chery","Chevrolet","Chrysler","Citroen","CityEL","CMC","Corvette","Courb","Cupra","Dacia","Daewoo","DAF","Daihatsu","Daimler","Dangel","De la Chapelle","De Tomaso","Derways","DFSK","Dodge","Donkervoort","DR Motor","DS Automobiles","Dutton","e.GO","Estrima","Ferrari","Fiat","FISKER","Gac Gonow","Galloper","GAZ","Geely","GEM","GEMBALLA","Genesis","Gillet","Giotti Victoria","GMC","Great Wall","Grecav","Haima","Hamann","Honda","HUMMER","Hurtan","Hyundai","Infiniti","Innocenti","Iso Rivolta","Isuzu","Iveco","IZH","Jaguar","Jeep","Karabag","Kia","Koenigsegg","KTM","Lada","Lamborghini","Lancia","Land Rover","LDV","Lexus","Lifan","Ligier","Lincoln","Lotus","Mahindra","MAN","Mansory","Martin Motors","Maserati","Maxus","Maybach","Mazda","McLaren","Melex","MG","Microcar","Minauto","MINI","Mitsubishi","Mitsuoka","Morgan","Moskvich","MP Lafer","MPM Motors","Nio","Nissan","Oldsmobile","Oldtimer","Pagani","Panther Westwinds","Peugeot","PGO","Piaggio","Plymouth","Pontiac","Porsche","Proton","Puch","Qoros","Qvale","RAM","Reliant","Rolls-Royce","Rover","Ruf","Saab","Santana","Savel","SDG","SEAT","Shuanghuan","Skoda","smart","SpeedArt","Spyker","SsangYong","StreetScooter","Subaru","Suzuki","TagAZ","Talbot","Tasso","Tata","Tazzari EV","TECHART","Tesla","Town Life","Toyota","Trabant","Trailer-Anhänger","Triumph","Trucks-Lkw","TVR","UAZ","Vanderhall","VAZ","VEM","Volvo","Vortex","Wallys","Wartburg","Westfield","Wiesmann","Zastava","ZAZ","Zhidou","Zotye","Sonstige"];
+        $( "#car_brand" ).autocomplete({
+            source: car_brands
+        });
+    </script>
 {% endblock %}
