--- a/templates/car/my/new.html.twig
+++ b/templates/car/my/new.html.twig
@@ -33,7 +33,86 @@
     <script>
         var car_brands = ["Audi","BMW","Ford","Mercedes-Benz","Opel","Renault","Volkswagen","9ff","Abarth","AC","ACM","Acura","Aixam","Alfa Romeo","Alpina","Alpine","Amphicar","Ariel Motor","Artega","Aspid","Aston Martin","Austin","Autobianchi","Auverland","Baic","Bedford","Bellier","Bentley","Bolloré","Borgward","Brilliance","Bugatti","Buick","BYD","Cadillac","Caravans-Wohnm","Casalini","Caterham","Changhe","Chatenet","Chery","Chevrolet","Chrysler","Citroen","CityEL","CMC","Corvette","Courb","Cupra","Dacia","Daewoo","DAF","Daihatsu","Daimler","Dangel","De la Chapelle","De Tomaso","Derways","DFSK","Dodge","Donkervoort","DR Motor","DS Automobiles","Dutton","e.GO","Estrima","Ferrari","Fiat","FISKER","Gac Gonow","Galloper","GAZ","Geely","GEM","GEMBALLA","Genesis","Gillet","Giotti Victoria","GMC","Great Wall","Grecav","Haima","Hamann","Honda","HUMMER","Hurtan","Hyundai","Infiniti","Innocenti","Iso Rivolta","Isuzu","Iveco","IZH","Jaguar","Jeep","Karabag","Kia","Koenigsegg","KTM","Lada","Lamborghini","Lancia","Land Rover","LDV","Lexus","Lifan","Ligier","Lincoln","Lotus","Mahindra","MAN","Mansory","Martin Motors","Maserati","Maxus","Maybach","Mazda","McLaren","Melex","MG","Microcar","Minauto","MINI","Mitsubishi","Mitsuoka","Morgan","Moskvich","MP Lafer","MPM Motors","Nio","Nissan","Oldsmobile","Oldtimer","Pagani","Panther Westwinds","Peugeot","PGO","Piaggio","Plymouth","Pontiac","Porsche","Proton","Puch","Qoros","Qvale","RAM","Reliant","Rolls-Royce","Rover","Ruf","Saab","Santana","Savel","SDG","SEAT","Shuanghuan","Skoda","smart","SpeedArt","Spyker","SsangYong","StreetScooter","Subaru","Suzuki","TagAZ","Talbot","Tasso","Tata","Tazzari EV","TECHART","Tesla","Town Life","Toyota","Trabant","Trailer-Anhänger","Triumph","Trucks-Lkw","TVR","UAZ","Vanderhall","VAZ","VEM","Volvo","Vortex","Wallys","Wartburg","Westfield","Wiesmann","Zastava","ZAZ","Zhidou","Zotye","Sonstige"];
         $( "#car_brand" ).autocomplete({
-            source: car_brands
+            source: function( request, response ) {
+                var matcher = new RegExp("^" + $.ui.autocomplete.escapeRegex(request.term), "i");
+                response($.grep(car_brands, function (item) {
+                    return matcher.test(item);
+                }));
+            }
         });
+
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    $('#form-carPhoto').addClass('d-none');
+                    let divPhot ='<div class=\"w-25 mb-3\" id="display-carPhoto">' +
+                                    '<img id="blah" src="' + e.target.result + '" ' +
+                                    'alt="your image" width="100" height="100" />'+
+                                    '<div id="delete-carPhoto"><i class="fas fa-trash-alt text-danger"></i></div>'+
+                                 '</div>';
+                    $('#carPhoto-content').append( divPhot );
+
+                };
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+        $("#carPhoto").change(function() {
+            if( this.files && this.files[0] ){
+                $('#btn-submit').attr( "disabled", true );
+                //console.log( this.files[0] );
+                var carPhoto = this;
+                let fd = new FormData();
+                    fd.append('carPhoto', this.files[0] );
+
+                $.ajax({
+                    type: "POST",
+                    url: '/my/car/photo/upload',
+                    data:fd ,
+                    contentType: false,
+                    processData: false,
+                    success: function( data  ){
+                        if( data && data.file_name ){
+                            if( Array.isArray( data.file_name ) && data.file_name.length ){
+                                readURL( carPhoto );
+                                $('#car_image').val( data.file_name[0] );
+                                $('#btn-submit').attr("disabled", false );
+                            }
+
+                        } else {
+                            // write error upload
+                            $('#btn-submit').attr("disabled", false );
+                        }
+
+                    },
+                });
+
+            }
+
+        });
+        $(document).on('click','#delete-carPhoto', function () {
+            $('#btn-submit').attr( "disabled", true );
+            // console.log( $('#car_image').val() );
+            $.ajax({
+                type: "POST",
+                url: '/my/car/photo/upload/delete',
+                data: {fid: $('#car_image').val()},
+                success: function( data  ){
+                    if( data ){
+                        $('#form-carPhoto').removeClass('d-none');
+                        $('#car_image').val('');
+                        $('#carPhoto').val(null);
+                        $('#btn-submit').attr("disabled", false );
+                        $(document).find('div#delete-carPhoto').parent().remove();
+                    } else {
+                        // write error upload
+                    }
+
+                },
+            });
+
+        });
+
     </script>
 {% endblock %}
