--- a/templates/car/my/show.html.twig
+++ b/templates/car/my/show.html.twig
@@ -37,6 +37,16 @@
                         <th>Anzahl der Sitzplätze</th>
                         <td>{{ car.maxPassangers }}</td>
                     </tr>
+                    <tr>
+                        <th>Photo</th>
+                        <td>{% if car.image is not empty  %}
+                            <div class="w-25 mb-3" id="display-carPhoto">
+                                <img id="blah" src="/media/car_images/{{ car.image}}"
+                                     alt="your image" width="100" height="100" />
+                            </div>
+                            {% endif %}
+                        </td>
+                    </tr>
                 </tbody>
             </table>
             <div class="clearfix">
