OneToOne Car Problems starts here

--- a/templates/car/my/index.html.twig
+++ b/templates/car/my/index.html.twig
@@ -7,13 +7,13 @@
 <div class="card mb-3" style="max-width: 540px; font-size: 0.8rem">
     <div class="row no-gutters">
         <div class="card-body">
-    <table class="table">
+    <table class="table table-striped table-bordered">
         <div class="text-info">Max 3 Autos !</div>
         <thead>
             <tr>
                 <th>Brand</th>
                 <th>Model</th>
-                <th>actions</th>
+                <th>Aktionen</th>
             </tr>
         </thead>
         <tbody>
@@ -35,7 +35,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('my_car_new') }}"><i class="fas fa-plus"></i> Neu</a>
+    <a href="{{ path('my_car_new') }}"><i class="fas fa-plus"></i> Neu Auto</a>
         </div>
     </div>
 
