--- a/templates/components/sidebar/my.right.html.twig
+++ b/templates/components/sidebar/my.right.html.twig
@@ -43,7 +43,7 @@
     </div>
     <!-- Nav Item - Ride -->
     <li class="nav-item ml-2">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{{ path('my_ride_index') }}">
             <i class="fas fa-bus-alt"></i>
             <span>Die Fahrt</span></a>
     </li>
