--- a/templates/main/search.location.html.twig
+++ b/templates/main/search.location.html.twig
@@ -1,6 +1,6 @@
 {% extends 'main.base.html.twig' %}
 
-{% block title %}Welcome!{% endblock %}
+{% block title %}Search a ride !{% endblock %}
 
  {% block mainContent %}
     {% include "main/_search_ride_form.html.twig" %}
