--- a/templates/car/my/edit.html.twig
+++ b/templates/car/my/edit.html.twig
@@ -10,6 +10,7 @@
 <div class="card mb-3" style="max-width: 540px; font-size: 0.8rem">
     <div class="row no-gutters">
         <div class="card-body">
+            {% if form is not empty %}
             <div class="w-50">
                 {{ include('car/my/_form.html.twig', {'button_label': 'Update'}) }}
                  <hr>
@@ -18,6 +19,9 @@
                     <div class="float-left"><a href="{{ path('my_car_delete', {'id': car.id,'_token': csrf_token('delete' ~ car.id)}) }}"><i class="fas fa-trash-alt text-danger" style="font-size:1rem"></i></a></div>
                 </div>
             </div>
+            {% else %}
+                <div>something went wrong try again</div>
+            {% endif %}
         </div>
     </div>
 
