--- a/templates/car/my/show.html.twig
+++ b/templates/car/my/show.html.twig
@@ -7,7 +7,7 @@
 <div class="card mb-3" style="max-width: 540px; font-size: 0.8rem">
     <div class="row no-gutters">
         <div class="card-body">
-            <table class="table">
+            <table class="table table-striped table-bordered w-75">
                 <tbody>
                     <tr>
                         <th class="w-50">Marke</th>
