--- a/templates/car/my/index.html.twig
+++ b/templates/car/my/index.html.twig
@@ -38,6 +38,6 @@
     <a href="{{ path('my_car_new') }}"><i class="fas fa-plus"></i> Neu Auto</a>
         </div>
     </div>
-
+    <div class="text-danger font-weight-bold p-2" style="font-size: 0.9em">Durch das Löschen eines Autos werden die Fahrten dieses Autos automatisch gelöscht. Eine Fahrt gibt es nicht ohne Auto</div>
 </div>
 {% endblock %}
