--- a/templates/components/sidebar/my.right.html.twig
+++ b/templates/components/sidebar/my.right.html.twig
@@ -17,7 +17,7 @@
     </li>
     <!-- Nav Item - Address -->
     <li class="nav-item ml-2">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{{ path('my_address_index') }}">
             <i class="fas fa-address-card"></i>
             <span>Addresse</span></a>
     </li>
@@ -48,15 +48,15 @@
             <span>Die Fahrt</span></a>
     </li>
     <!-- Heading -->
-    <div class="sidebar-heading font-weight-bold">
+    <!--<div class="sidebar-heading font-weight-bold">
         Rückmeldungen
-    </div>
+    </div>-->
     <!-- Nav Item - Rating -->
-    <li class="nav-item ml-2">
-        <a class="nav-link" href="index.html">
+    <!-- <li class="nav-item ml-2">
+        <a class="nav-link" href="" disabled="disabled">
             <i class="fas fa-star-half-alt"></i>
             <span>Bewertung</span></a>
-    </li>
+    </li>-->
 
     <!-- Heading -->
     <div class="sidebar-heading font-weight-bold">
@@ -64,7 +64,7 @@
     </div>
     <!-- Nav Item - Ride -->
     <li class="nav-item ml-2">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" href="{{ path('my_contact_admin') }}">
             <i class="fas fa-user-tie"></i>
             <span>Admin kontaktieren</span></a>
     </li>
