--- a/templates/ride/my/edit.html.twig
+++ b/templates/ride/my/edit.html.twig
@@ -28,4 +28,5 @@
     <script src="{{ asset('js/jquery-ui.min.js') }}" ></script>
     <script src="{{ asset('js/ride.form.js') }}" ></script>
     <script src="{{ asset('js/ride-form-rules.js') }}"></script>
+    <script> $( function() { autoCompleteSearchForm( ['ride_pickUp','ride_dropOff'] ); }); </script>
 {% endblock %}
