--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -6,7 +6,68 @@
         <link href="{{ asset('css/jquery-ui.min.css') }}" rel="stylesheet">
     {% endblock %}
  {% block mainContent %}
-     {% include "main/_search_ride_form.html.twig" %}
+     {% if rides is not empty %}
+         <div> {{ rides | length }} Fahrten von Berlin nach Hamburg verfügbar </div>
+         {% for ride in rides %}
+             <a href="{{ path('ride_search_details',{ 'id':ride.id } ) }}" class="alert alert-dark btn btn-block font-weight-bold text-primary" role="alert">
+                 <div class="user_details clearfix">
+                    <div class="float-left">
+                        <span>{{ ride.price }} €</span>
+                    </div>
+                     <div class="float-right">
+                         <div class="clearfix">
+                             <div class="align-middle mr-3 float-left mt-2">{{ ride.user.firstName }}</div>
+
+                             {% if ride.user.photo is empty %}
+                             <img src="/media/images/50.png" width="50" height="50"
+                                  class="rounded-circle float-right" alt="person name {{ ride.user.firstName }}">
+                                 {% else %}
+                                     <img src="/media/images/{{ ride.user.photo}}" width="50" height="50"
+                                          class="rounded-circle float-right" alt="person name {{ ride.user.firstName }}">
+                             {% endif %}
+                         </div>
+                     </div>
+                 </div>
+                 <div class="ride_details clearfix">
+                     <div><i class="fas fa-running"></i> X {{ ride.passengers }}</div>
+                     <div class="row mx-auto">
+                         <div class="col p-0">
+                             <div style="border-right: 2px solid #c6c8ca; padding-right: 4px">
+                                 <div class="w-100 text-right">{{ ride.pickUpTime | date('H:i') }}</div>
+                                 <div class="w-100 text-right">{{ ride.pickUp }}</div>
+                             </div>
+
+                         </div>
+                         <div class="col p-0">
+                             <div class="w-100 h-100">
+                                 <div class="mt-3 clearfix">
+                                    <div class="float-left" style="width:11%"><i class="far fa-circle"></i></div>
+                                     <div class="float-left" style="margin-top: -4px; width:78%"><hr /></div>
+                                     <div class="float-left" style="width:11%"><i class="fas fa-arrow-alt-circle-right"></i></div>
+                                 </div>
+
+                             </div>
+                         </div>
+                         <div class="col p-0">
+                             <div style="border-left: 2px solid #c6c8ca; padding-left: 4px">
+                                 <div class="w-100 text-left">{{ ride.dropOffTime | date('H:i') }}</div>
+                                 <div class="w-100 text-left">{{ ride.dropOff }}</div>
+                             </div>
+                         </div>
+                     </div>
+                 </div>
+
+
+             </a>
+         {% else %}
+             <tr>
+                 <td colspan="3">Kein Auto in der Liste gefunden</td>
+             </tr>
+         {% endfor %}
+         {% else %}
+             {% include "main/_search_ride_form.html.twig" %}
+     {% endif %}
+
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
@@ -18,6 +79,5 @@
             setDefaultDate( 'search_ride_pickUpDate' );
             autoCompleteSearchForm( ['search_ride_pickUp','search_ride_dropOff'] );
         } );
-    </script>
     </script>
 {% endblock %}
