--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,6 +6,8 @@
      <h1 class="h3 mb-3 font-weight-bold">Registrieren</h1>
      {% form_theme registrationForm 'bootstrap_4_layout.html.twig' %}
      {{ form_start(registrationForm, {'attr': {class: 'w-75 mx-auto'}} ) }}
+     {{ form_row(registrationForm.sex, { 'label': 'Geschlecht' }) }}
+
      {{ form_row(registrationForm.firstName, { 'label': 'Vorname' }) }}
      {{ form_row(registrationForm.lastName, { 'label': 'Nachname' }) }}
      {{ form_row(registrationForm.dateOfBirth, { 'label': 'Geburtsdatum' }) }}
