--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,14 +20,16 @@
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
         See https://symfony.com/doc/current/security/remember_me.html
   #}
-        <div class="checkbox mt-2 mb-3">
+        <div class="checkbox mt-2 mb-1">
             <label>
                 <input type="checkbox" name="_remember_me"> Erinnere dich an mich
             </label>
         </div>
 
-
-    <button class="btn btn-lg btn-primary" type="submit">
+    <div class="mb-2">
+        <a href="{{ path('app_pwd_new') }}" >Passwort vergessen ?</a>
+    </div>
+    <button class="btn btn-lg btn-primary mb-2" type="submit">
         Einloggen
     </button>
 </form>
