--- a/templates/components/header/navbar.top.htlm.twig
+++ b/templates/components/header/navbar.top.htlm.twig
@@ -42,7 +42,7 @@
                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                     Profile
                 </a>
-                <a class="dropdown-item" href="#">
+                <a class="dropdown-item" href="{{ path('my_car_index') }}">
                     <i class="fas fa-car fa-sm fa-fw mr-2 text-gray-400"></i>
                     Auto
                 </a>
@@ -50,11 +50,11 @@
                     <i class="fas fa-bus-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                     Die Fahrt
                 </a>
-                <a class="dropdown-item" href="#">
+                <!--<a class="dropdown-item" href="#">
                     <i class="fas fa-star-half-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                     Bewertung
-                </a>
-                <a class="dropdown-item" href="#">
+                </a>-->
+                <a class="dropdown-item" href="{{ path('my_contact_admin') }}">
                     <i class="fas fa-user-tie fa-sm fa-fw mr-2 text-gray-400"></i>
                     Admin
                 </a>
